main page data input

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Steve's Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,9 +24,10 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>StevieCan</h1>
+								<p>Chicago born and bred. <a href="https://iuhoosiers.com/">IU Hoosier</a> superfan <br /> and 
+								avid sports fan specifically <a href="https://nba.com">NBA</a> and <a href="https://nfl.com">NFL</a>. <br /> 
+								Please check out my <a href="https://github.com/StevieCan">Github </a>and <a href="https://www.linkedin.com/in/stevehan614/">LinkedIn</a> accounts for more information!</p>
 							</div>
 						</div>
 						<nav>
@@ -343,7 +344,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p> "Failure Measures Success"</p>
 					</footer>
 
 			</div>
