fixed work info

--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
-								<p> Worked for two years as a business development representative for Clean and Science. Headquartered in Seoul, South Korea, our main focus was to expand globally into the US market. Our sales team was in charge of all sales and operation within the U.S. and Canada. The  two man Americas sales team consisted of myself and our sales manager. Collectively, we generated $1.5 million in revenue per annum. </p>
+								<p> I am a firm believer in working hard to get what you want. I started working as an eight grader as a caddy at Twin Orchards Country Club. Working in manual labor did not limit me to value nutrition; however, it also taught me the basis of sales. I credit this job to building the foundation of my skills that helped me become so successful in sales. Being a caddy requires patience, great communication skills, leadership, and great relationships. I started as a caddy in 2003 and have maintained a healthy relationship with my boss even to this day. When they are short caddies, I gladly fill in for a couple weekends; however, I stopping going regularly in 2014. 
+								</p>
+								<p> Most recently worked for two years as a business development representative for Clean and Science. Headquartered in Seoul, South Korea, our main focus was to expand globally into the US market. Our sales team was in charge of all sales and operation within the U.S. and Canada. The  two man Americas sales team consisted of myself and our sales manager. Collectively, we generated $1.5 million in revenue per annum. </p>
 								
-								<!-- <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus. --></p>
 							</article>
 
 						<!-- About -->
