--- a/index.html
+++ b/index.html
@@ -65,8 +65,14 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<span class="image main"><img src="images/chicagosports.jpeg" alt="" /></span>
+								<p> 
+								- Born in Chicago, Illinois on June 14. <br>
+								- Spent most of my childhood in the northwest suburbs in the town of Buffalo Grove. <br>
+								- Graduated from Stevenson High School in Lincolnshire, IL. <br>
+								- Attended Indiana University in Bloomington, IN<br>
+
+								<br>I grew up in a loving home and family was a value instilled in me at an early age. I also had a very active childhood that involved swimming lessons, park rec basketball, piano and violin lessons, flag football, and travel volleyball. I consider myself a very lucky kid that was able to experience a lot of things that I definitely took for granted at the time. These life experiences are something that shape the person I am today. I love to play sports and that shows through my dedication to Indiana University basketball and my beloved Chicago professional sports teams. Definitely a Cubs fan! </p>
 							</article>
 
 						<!-- Contact -->
