added intro and minor pic changes

--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/mypic-resized.png" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<span class="image main"><img src="images/mypic-small.jpg" alt="" /></span>
+								<p>
+									Went to school at the Kelley School of Business from Indiana University. After about five years in sales, I realized that I wanted a change in profession. I enjoyed being in sales; however, it was a hectic lifestyle that required a lot of travel and time commitment including the weekends. I consider myself a religious person and like to attend Sunday services at my home church, Hebron Presbyterian Church. After much reflection and advice from friends that switched into IT, I researched the top coding bootcamps located in Chicago. <br>
+									<br>I committed to Actualize Coding Bootcamp after speaking with alumni and peers who graduated from other top schools including Northwestern and Fullstack. After three months of intensive schooling, I officially became a web developer; however, with the title came the most challenging obstacle to come. That desire to learn was instilled in me but it was up to me to continue to seek information and practice what I had learned. To this day, I am continuing to further my education by taking small classes and learning new languages.  
+									
+									By the way, check out my <a href="#work">awesome work</a>.</p>
+								
 							</article>
 
 						<!-- Work -->
