--- a/index.html
+++ b/index.html
@@ -92,9 +92,15 @@
 											<label for="email">Email</label>
 											<input type="text" name="email" id="email" />
 										</div>
-										<div class="field">
+										<div class="field half">
 											<label for="message">Message</label>
 											<textarea name="message" id="message" rows="4"></textarea>
+										</div>
+										<div class="field half">
+											<label for="response">Response Time</label>
+											<input type="radio" name="response" value="morning" >Morning <br>
+											<input type="radio" name="response" value="afternoon" >Afternoon <br>
+											<input type="radio" name="response" value="evening" >Evening <br>
 										</div>
 									</div>
 									<ul class="actions">
